--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="layers__item layer-2" style="background-image: url(img/layer-2.png);"></div>
 			<div class="layers__item layer-3">
 				<div class="hero-content">
-					<h1>Натуральный Лес <span>Паралакс Эфект</span></h1>
+					<h1>Натуральный Лес <span>Паралакс Эффект</span></h1>
 					<div class="hero-content__p">Создание красивого 3D-сайта с эффектом линзы</div>
 					<button class="button-start">Start Learning</button>
 				</div>
